[Fix] swagger (#43)
